Added twitter cards for videos

--- a/app/templates/gemconf.hbs
+++ b/app/templates/gemconf.hbs
@@ -1,6 +1,6 @@
 {{head-data
   title=model.title
-  image='/assets/images/GEMconf-SF-Header.svg'
+  heroImage='/assets/images/GEMconf-SF-Header.svg'
   heroTitle=model.heroTitle
   heroSubTitle=model.heroSubTitle
   classNames="gemconf"
