--- a/app/templates/components/responsive-vimeo-video.hbs
+++ b/app/templates/components/responsive-vimeo-video.hbs
@@ -1,5 +1,7 @@
-{{#if isValidVimeoURL}}
-<iframe src="https://player.vimeo.com/video/{{vimeoId}}" frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-{{else}}
-<span class="error">Could not extract vimeo id from {{video}}</span>
-{{/if}}
+{{#with (vimeo-player-url video) as |playerUrl|}}
+  {{#if playerUrl}}
+  <iframe src={{playerUrl}} frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+  {{else}}
+  <span class="error">Could not extract vimeo id from {{video}}</span>
+  {{/if}}
+{{/with}}
