Improved Fastboot compatibility

--- a/app/templates/components/episode-strip-details-frame.hbs
+++ b/app/templates/components/episode-strip-details-frame.hbs
@@ -13,7 +13,7 @@
         {{{topic.excerpt}}}
       </div>
       <div class="guest-column">
-        <img class="row-thumbnail" src={{topic.presenter.featured.thumbnail.url}} alt={{topic.presenter.title}}>
+        <img class="row-thumbnail" src="{{topic.presenter.featured.thumbnail.url}}" alt="{{topic.presenter.title}}">
         <h4 class="row-title presenter-title">{{topic.presenter.title}}</h4>
         {{{topic.presenter.excerpt}}}
       </div>
