Added Newsletter page

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -19,6 +19,7 @@ $base-separator: 1px solid transparentize($dark-gray, 0.9);
 @import 'pages/_video';
 @import 'pages/_show';
 @import 'pages/_tools';
+@import 'pages/_newsletter';
 
 @import 'components/_nav-header';
 @import 'components/_box-content';
