--- a/app/templates/newsletter.hbs
+++ b/app/templates/newsletter.hbs
@@ -2,8 +2,8 @@
   title="Newsletter"
 }}
 
-<h2>Be the first to know about Global Ember Meetup events and latest videos.</h2>
+<h2>Be the first to know about Ember.js events and videos.</h2>
 
 {{subscription-form}}
 
-<p>Free. No Spam. No waffle. Weekly. Delivered directly to your inbox. Unsubscribe at any time.</p>
+<p>Delivered directly to your inbox twice a month.</p>
