Started tweeking content

--- a/app/templates/gemconf.hbs
+++ b/app/templates/gemconf.hbs
@@ -1,11 +1,11 @@
 {{head-data
   title=model.title
-  heroImage='/assets/images/GEMconf-SF-Header.svg'
+  heroImage='/assets/images/Global-Meetup-Header-Triangle-Final.svg'
   heroTitle=model.heroTitle
   heroSubTitle=model.heroSubTitle
   classNames="gemconf"
-  buttonUrl="https://www.twitch.tv/global_ember_meetup"
-  buttonText="Watch Stream"
+  buttonUrl="https://www.eventbrite.com/e/global-ember-meetup-conference-live-in-the-triangle-gemconf-tickets-22584175878"
+  buttonText="RSVP"
 }}
 {{remember-document-scroll key="gemconf"}}
 
