--- a/app/templates/gemconf/index.hbs
+++ b/app/templates/gemconf/index.hbs
@@ -127,6 +127,6 @@
   <p>Want your logo to be seen by some ridiculously awesome developers?<br>
   We would be very grateful for your support.</p>
 
-  {{link-to 'Sponsor Us!' 'pages' 'sponsor' classNames='button red-button'}}
+  <a href="mailto:t@embersherpa.com?Subject=Sponsor%20GEMconf" class="button red-button">Sponsor</a>
 
 {{/box-callout}}
