Updated GEMconf Training page

--- a/app/templates/gemconf/training.hbs
+++ b/app/templates/gemconf/training.hbs
@@ -37,7 +37,7 @@
       <div class="columns">
         <div class="col-1">
           <h3>Day 1 - Ember.js Fast Track</h3>
-          <p class="red">Monday May 23, 2016, 9am-6pm</p>
+          <p class="red">Monday Aug 15, 2016, 9am-6pm</p>
           <p>
             Level up and develop a solid understanding of the Ember.js building blocks by utilizing 
             advanced community driven solutions to common problems.
@@ -81,7 +81,7 @@
         </div>
         <div class="col-2">
           <h3>Day 2 - Ember.js Expansion Track</h3>
-          <p class="red">Tuesday May 24, 2016, 9am-6pm PDT</p>
+          <p class="red">Tuesday Aug 16, 2016, 9am-6pm</p>
           <p>
             Attendance of Day 1 is not required, but recommended you understand 
             all fundamental basics listed under key concepts.
@@ -162,7 +162,7 @@
     
     {{#box-content}}
     
-      <h2>Learn in San Francisco</h2>      
+      <h2>Learn in the Research Triangle</h2>      
       {{#gem-cards classNames="three-cards" as |cards|}}
         {{#cards.card 'Day 1 - Fast Track'}}
           <p>This training is designed to quickly level up your Ember skills.</p>
