--- a/app/templates/gemconf/training.hbs
+++ b/app/templates/gemconf/training.hbs
@@ -139,42 +139,16 @@
     {{/box-content}}
 
     {{#box-content}}
-      <h2>Learn Remotely</h2>
+      <h2>Buy Tickets</h2>
       
-      {{#gem-cards classNames="three-cards" as |cards|}}
-        {{#cards.card 'Day 1 - Fast Track'}}
-          <p>This training is designed to quickly level up your Ember skills.</p>
-          <a class="button red-button" href={{model.eventbrite}}>$349</a>
-        {{/cards.card}}
-
-        {{#cards.card 'Day 2 - Expansion'}}
-          <p>Strengthen your Ember.js knowledge and level up your skills using the framework.</p>
-          <a class="button red-button" href={{model.eventbrite}}>$349</a>
-        {{/cards.card}}
+      {{#gem-cards classNames="two-cards" as |cards|}}
         
-        {{#cards.card 'Day 1 & Day 2 - Complete'}}
+        {{#cards.card 'Learn Remotely'}}
           <p>Everything you need to build your first Ember.js application.</p>
           <a class="button red-button" href={{model.eventbrite}}>$599</a>
         {{/cards.card}}
-      {{/gem-cards}}
-      
-    {{/box-content}}
-    
-    {{#box-content}}
-    
-      <h2>Learn in the Research Triangle</h2>      
-      {{#gem-cards classNames="three-cards" as |cards|}}
-        {{#cards.card 'Day 1 - Fast Track'}}
-          <p>This training is designed to quickly level up your Ember skills.</p>
-          <a class="button red-button" href={{model.eventbrite}}>$599</a>
-        {{/cards.card}}
-
-        {{#cards.card 'Day 2 - Expansion'}}
-          <p>Strengthen your Ember.js knowledge and level up your skills using the framework.</p>
-          <a class="button red-button" href={{model.eventbrite}}>$599</a>
-        {{/cards.card}}
         
-        {{#cards.card 'Day 1 & Day 2 - Complete'}}
+        {{#cards.card 'Learn in the Research Triangle'}}
           <p>Everything you need to build your first Ember.js application.</p>
           <a class="button red-button" href={{model.eventbrite}}>$1099</a>
         {{/cards.card}}
