copy changes to training page

--- a/app/templates/gemconf/training.hbs
+++ b/app/templates/gemconf/training.hbs
@@ -10,9 +10,10 @@
     }}
       <h2>Live training at GEMconf</h2>
       <p>
-        This training is designed to quickly level up your Ember skills. 
-        The fast paced curriculum will focus on building a solid foundation 
-        in Ember and dive into advanced Ember techniques.
+        We are offering 2 training courses as part of GEMconf Triangle, Fundamentals & Advanced. Whether you're looking for a solid understanding of all the fundamentals needed to be an effective Ember developer, or looking to dive deeper into the issues that face developers of larger, more complex Ember apps, we've got you covered. Both are intensive learning experiences, aiming to accelerate your career by ensuring a complete understanding of the topics covered.
+      </p>
+      <p>
+        We believe learning happens best when supported by connections to others in the community. We'd love to have you join us this August in the Triangle.
       </p>
     {{/box-content}}
     
@@ -36,68 +37,75 @@
       <h2 class="margin-bottom-0">Schedule</h2> 
       <div class="columns">
         <div class="col-1">
-          <h3>Day 1 - Ember.js Fast Track</h3>
+          <h3>Day 1 - Ember Fundamentals</h3>
           <p class="red">Monday Aug 15, 2016, 9am-6pm</p>
           <p>
-            Level up and develop a solid understanding of the Ember.js building blocks by utilizing 
-            advanced community driven solutions to common problems.
+            This course is designed to give the learner an in-depth understanding of all the fundamentals needed to build a complex Ember app. It includes access to pre-recorded videos and a live, hands-on and project-based workshop.
+          </p>
+          <h4>Who is this for?</h4>
+          <p>
+            Whether you're:</p>
+            <ul>
+              <li>a complete beginner to Ember</li>
+              <li>have been working with it for 1–3 years</li>
+              <li>have used another Javascript framework</li>
+            </ul>
+            <p>
+              As long as you are proficient in basic Javascript, are familiar with using Git this course will teach you the fundamentals needed to be an effective Ember developer.
+            </p>
+          <h4>What will the experience be like?</h4>
+          <h5>Pre-course Videos</h5>
+          <p>
+            Two weeks prior to the workshop, you’ll have access to our pre-course videos. As you view them, as fast or as slow as YOU want, write down your questions as they pop into your head. As your subconscious mind continues to work in the shower, or while washing the dishes, even more questions may occur to you. We will collect all of these questions before the workshop to allow our instructors to dive right into the details that are relevant to the group.
           </p>
           <p>
-            Some of the techniques we teach will include exploration into Ember's rich 
-            <a href="https://www.emberaddons.com/">add-on ecosystem</a>, 
-            <a href="https://emberobserver.com/categories/authentication">authorization / authentication</a>, 
-            and <a href="https://guides.emberjs.com/v2.3.0/testing/">advanced testing techniques</a>.
-          </p>
-          <p>
-            This day is great for developers who have zero Ember.js experience.
-          </p>
-          <p>
-            This course is also great for developers who understand Ember.js but need to 
-            develop a stronger understanding of how to utilize Ember.js to create ambitious web apps.
-          </p>
-          <h4>Key Concepts</h4>
-          <dl>
-            <dt>Creating a new project</dt>
-            <dd>Use <a href="https://ember-cli.com/">Ember CLI</a> to create a new project and go over the basic structure of an app.</dd>
-            <dt>Running the server</dt>
-            <dd>Serve an ember app in development.</dd>
-            <dt>Basic testing</dt>
-            <dd>Generate an acceptance test and run the <a href="https://guides.emberjs.com/v2.3.0/testing/">test suite</a>.</dd>
-            <dt>Promises</dt>
-            <dd>Introduce how Ember deals with asynchronous behavior.</dd>
-            <dt>Routes</dt>
-            <dd>Learn what gives structure to an Ember application.</dd>
-            <dt>Components</dt>
-            <dd>Share reusable templates and behavior.</dd>
-            <dt>Actions</dt>
-            <dd>Trigger changes based on user input.</dd>
-            <dt>Services</dt>
-            <dd>Move persistent state out of short lived components.</dd>
-            <dt>Add-ons</dt>
-            <dd>Utilize community driven and proven solutions.</dd>
-            <dt>Helpers</dt>
-            <dd>Extract small pieces of reusable template code.</dd>                  
-          </dl>
+            Videos will cover these topics:</p>
+            <ul>
+              <li>Philosophy of Ember</li>
+              <li>ES6 Deep Dive</li>
+              <li>Router and Routes</li>
+              <li>Promises & Async JS</li>
+              <li>Ember-cli</li>
+            </ul>
+            <p>
+              Our pre-course videos are tightly edited and concise, aiming to give you the knowledge you need, in the minimum amount of time. We use both live video and screen capture of Chase and Jon explaining the context and concepts you’ll need to be comfortable with in class. Through slides, diagrams and demos, you’ll have the background needed before jumping into our workshop project.
+            </p>
+            <h5>In-person and Online Workshop</h5>
+              <p>
+                During this workshop we will be spending nearly ALL of our time building a project. After a chance for questions about the video topics to be answered and clarified and the knowledge level of the group is normalized as much as possible, learners will be guided through the hands-on process of building a Gmail type webmail app.
+              </p>
+              <p>
+                Developing this app will show students how to:
+              </p>
+              <ul>
+                <li>build complex layouts, using nested UI using components and templates</li>
+                <li>practice creating routes and understand when to use sibling routes, or handle complex routing scenarios</li>
+                <li>create list or collection views with items styled based on the data model and also user actions</li>
+                <li>best way to display modal windows, drop down menus and other complicated UI patterns</li>
+                <li>understand the Ember object model and where data is stored, what happens when it changes and how to respond to user inputs</li>
+                <li>use Mirage, a backend API mock up tool</li>
+                <li>create a service to handle user/session authentication</li>
+                <li>evaluate considerations for deployment</li>
+              </ul>
+              <p>
+                Remote learners will see the instructor’s screen and have a crisp audio feed of what’s being said. There will be a Slack room for group chat and a system for 2 way voice communication so we can hear your questions too!
+              </p>
+              <p>
+                Along the way, you’ll hear stories from Chase and Jonathan about working on the front lines of a busy consulting shop and get to ask them about issues specific to your projects! 
+              </p>
         </div>
         <div class="col-2">
-          <h3>Day 2 - Ember.js Expansion Track</h3>
+          <h3>Day 2 - Ember Advanced</h3>
           <p class="red">Tuesday Aug 16, 2016, 9am-6pm</p>
           <p>
-            Attendance of Day 1 is not required, but recommended you understand 
-            all fundamental basics listed under key concepts.
+            Attendance of Day 1 is not required, but we recommended you ensure you have a good understanding of how to do all of the things we cover in the Fundamentals course.
           </p>
           <p>
-            Strengthen your Ember.js knowledge and level up your skills using the 
-            framework. We will also build on the foundation of the app we create in Day 1.
+            In the Advanced workshop, we'll build on the foundation of the app we created in Day 1 and dive deeper into topics that arise as your app gets larger and more feature complete, such as adding user authentication, how to interact with APIs and persist that data to various backends, how to deal with realtime scenarios, and best practices to keep your code organized, maintainable and tested. 
           </p>
-          <p>
-              We'll start this day off with training focused on what to do when your app is 
-              more complete. We'll walk through the structure of a complex Ember app by showcasing 
-              key features listed below.
-          </p>
-          <h4>Key Concepts</h4>
+          <h4>What You'll Learn:</h4>
             <dl>
-              <dt>Advanced testing</dt>
+              <dt>Advanced Testing</dt>
               <dd>
                 <ul>
                   <li>Acceptance tests</li>
@@ -129,10 +137,10 @@
                   <li>Persisting data</li>
                 </ul>
               </dd>
-              <dt>Deployment</dt>
-              <dd>Deploy your Ember apps easily and confidently with <a href="https://ember-cli.com/ember-cli-deploy/">ember-cli-deploy</a>.</dd>
               <dt>Sockets</dt>
               <dd>Learn how to integrate real-time data into Ember Data with sockets.</dd>
+              <dt>Deployment</dt>
+              <dd>Deploy your Ember apps easily and confidently with <a href="https://ember-cli.com/ember-cli-deploy/">ember-cli-deploy</a>.</dd>          
             </dl>
         </div>
       </div>
